--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,12 @@ html
 	position: relative;
 }
 
+.avatar
+{
+	border: 5px solid #fff;
+	max-width: 240px;
+}
+
 .section:before
 {
 	content:"";
@@ -53,7 +59,17 @@ html
 
 .section.dark-section, .section:before
 {
-	background-color: #3F729B; /* unique-color */
+	background-color: #1C2331; /* unique-color */
+}
+
+.section h3
+{
+	color: #1C2331;
+}
+
+.section.dark-section h3
+{
+	color: #f5f5f5;
 }
 
 .result
@@ -72,10 +88,17 @@ html
 	border: 2px solid #ff3547; /* text-danger */
 }
 
-
-.project-card
+.carousel-arrow
 {
-	height: 1000px;
+	align-self: start;
+	max-width: 20px;
+	padding: 0;
+	margin-top: 200px;
+}
+
+.carousel-arrow .carousel-control-prev, .carousel-arrow .carousel-control-next
+{
+	width: 100%;
 }
 
 .carousel .carousel-indicators
@@ -89,6 +112,16 @@ html
 	height: 100px;
 	text-indent: inherit;
 	background: none;
+}
+
+.email-link
+{
+	color:black;
+}
+
+.email-link:hover
+{
+	color:gray;
 }
 
 footer.page-footer .footer-copyright
