--- a/css/style.css
+++ b/css/style.css
@@ -126,5 +126,5 @@ html
 
 footer.page-footer .footer-copyright
 {
-	background-color: #1C2331; /* unique-color-dark */
+	background-color: black;
 }
